# cartoon_gen

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
agent_researcher/: CLAUDE.md  README.md  __main__.py  alerts.py  brief.py  dedup.py  prefilter.py  runner.py  scheduler.py  scorer.py
caption_maker/: CLAUDE.md  __main__.py
script_writer/: CLAUDE.md  README.md  __main__.py  prompts.py
shared/: CLAUDE.md  README.md  assembler.py  config.py  context_loader.py  ffmpeg.py  models.py  utils.py
static_shots_maker/: CLAUDE.md  README.md  __main__.py  prompts.py
tests/: conftest.py  test_active_sources.py  test_alerts.py  test_art_materials_builder.py  test_assembler.py  test_brief.py  test_brief_reader.py  test_caption_runner.py  test_cartoon_script_serialization.py  test_config.py  test_context_loader.py  test_dedup.py  test_delivery_local.py  test_delivery_notion.py  test_ffmpeg_shared.py  test_filter_generator.py  test_image_generator.py  test_logline_generator.py  test_logline_selector.py  test_logline_tournament.py  test_manifest_reader.py  test_prefilter.py  test_prompt_generator.py  test_renderer.py  test_runner.py  test_scorer.py  test_script_editor.py  test_script_expander.py  test_script_reader.py  test_script_runner.py  test_script_writer_models.py  test_shot_verifier.py  test_shots_runner.py  test_sources.py  test_subtitle_burner.py  test_tiktok_auth.py  test_tiktok_runner.py  test_tiktok_uploader.py  test_tiktok_video_finder.py  test_transcriber.py  (+6 more)
tiktok_publisher/: CLAUDE.md  __main__.py  auth.py
(+53 files in other folders)
