[project]
name = "cartoon-maker"
version = "0.1.0"
description = "AI-powered pipeline for discovering trends and producing comedy cartoon videos"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0,<2",
    "praw>=7.7,<8",
    "feedparser>=6.0,<7",
    "rapidfuzz>=3.0,<4",
    "anthropic>=0.40,<1",
    "xai-sdk",
    "atproto>=0.0.50,<1",
    "apscheduler>=3.10,<4",
    "notion-client>=2.0,<3",
]
