[project]
name = "cartoon-maker"
version = "0.1.0"
description = "AI-powered pipeline for discovering trends and producing comedy cartoon videos"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0,<2",
    "praw>=7.7,<8",
    "feedparser>=6.0,<7",
    "rapidfuzz>=3.0,<4",
    "anthropic>=0.40,<1",
    "xai-sdk",
    "atproto>=0.0.50,<1",
    "apscheduler>=3.10,<4",
    "notion-client>=2.0,<3",
    "google-genai>=1.0,<2",
    "openai>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.8,<1",
    "pre-commit>=4.0,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "agent_researcher", "script_writer", "static_shots_maker", "video_designer", "caption_maker"]
